* Removed TorrentSpy search plugin
* Cryptography functionality & enabled by default (by imrook)
* Added checks to prevent normal users from seeing sensitive information (by deadeyes)
* Updated MiniNova search plugin (by alx)
* Removed CVS files for BitTornado
* Converted \r\n to \n in all source files
* Bug fix for torrents dying after they're started (tornado shell args not escaped)

Bug fixes from Debian team
* Recursive call error in SearchEngineBase
* Python filename dependency
* Parameter check in directory browser to prevent traversal above download directory
* Update settings fails with blank search filter

TorrentFlux v2.3
------------------
* Fixed more Arbitrary File Creation/Overwrite/Deletion & Command 
  Execution Vulnerablity (by TF Users).
* Security fixes on htmlentities.
* Added security check for JPG support with GD libs to prevent 
  user lock out if JPG support is not included in GD libs.
  (Note GD support is not required and is only for graphic 
  Security Code login).
* Upgraded to BitTornado 3.17 (BitTornado 3.15 source is still 
  included in tar.gz if you want to change back to 3.15).
  

TorrentFlux v2.2
------------------
* Added optional Security Code for login security.
* Fixed Arbitrary File Creation/Overwrite/Deletion & Command 
  Execution Vulnerablity (by TF Users).
* Fixed Qmanager looping issue.
* Added multi select delete to the directory listing.
* Updated RSSReader to not show error when no RSS feeds are used.
* Updated Search Engine Modules and bug fixes.
* Updated maketorrent to allow changing of chunk size.
* Added security fixes for htmlentities in User-Agents and 
  request variables.
* Fixed torrent start when advanced torrent start is turned off.
* Added page refresh countdown.
* Fixed jump links on RSS feed page.
* Updated Admin Links to allow editing and sorting.
* Added Turkish and Russian language files.


TorrentFlux v2.1
----------------
* Addes support for reading file size of files over 2.0 GB.