@@ -13,6 +13,8 @@ TorrentFlux v2.4
 * Removed CVS files for BitTornado
 * Converted \r\n to \n in all source files
 * Bug fix for torrents dying after they're started (tornado shell args not escaped)
+* Postgres 8 sql install scripts
+* Updated MySQL install scripts (TYPE clause depreciated for storage engine declarations)
 
 Bug fixes from Debian team
 * Recursive call error in SearchEngineBase
